--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </div>
 
     <script src="app.js"></script>
+    <script src="headLoader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
