--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Welcome to StudBud</h1>
         <button class="btn btn-primary" id="add-course-btn">Add New Course</button>
         <div id="courses-container" class="mt-4">
-            <!-- Dynamic course list to be created-->
+            <!-- Dynamic course list to be created v1-->
         </div>
     </div>
 
