--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <script src="headLoader.js"></script> 
+    <script src="headerLoader.js"></script> 
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
