--- a/course.html
+++ b/course.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">StudBud</a>
+        <a class="navbar-brand" href="index.html">StudBud</a>
     </nav>
 
     <div class="container my-5">
